--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,6 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "flask>=3.1.1",
-    "psycopg2>=2.9.10",
     "psycopg2-binary>=2.9.10",
+    "redis>=6.4.0",
 ]
