--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,15 @@ services:
   nginx:
     image: nginx:alpine
     ports:
-      - "80:80"
+      - "3000:80"
     volumes:
-      - ./simple-nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
-      web:
-        condition: service_healthy
+      - web
     restart: unless-stopped
+    
   web:
     build: .
-    ports:
-      - "5000:5000"
     environment:
       - APP_NAME=HELLO_DOCKER_COMPOSE
       - APP_VERSION=1.0
@@ -31,6 +29,9 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    deploy:
+      replicas: 3
+      
   db:
     image: postgres:17
     environment:
@@ -49,8 +50,6 @@ services:
 
   redis:
     image: redis:7-alpine
-    ports:
-      - "6739:6739"
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
@@ -58,5 +57,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
+      
 volumes:
   postgres_data:
